--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@google/genai": "^1.25.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
