updated vite url for production build

--- a/.env
+++ b/.env
@@ -15,4 +15,4 @@ API_KEY=AIzaSyB6RoVMIckuoMs3wpZZt3h9lnEDIFWD_3U
 # OPTIONAL for local development: The URL of your backend server.
 # The app defaults to http://localhost:3001/api if this is not set.
 # This becomes REQUIRED when you deploy your app to the web.
-VITE_API_BASE_URL=http://localhost:3001/api
+VITE_API_BASE_URL=https://https-github-com-stuartperrymason-ops.onrender.com
