--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongodb": "^6.5.0",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@types/papaparse": "^5.3.14",
