--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "description": "An application to store and manage information about models from various armies and tabletop gaming systems. Features include a detailed collection view, bulk CSV import/export, and settings to customize game systems and armies.",
   "private": true,
   "scripts": {
-    "dev": "vite",
-    "start": "vite preview",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+  "dev": "vite",
+  "start": "vite preview",
+  "build": "tsc && vite build",
+  "preview": "vite preview",
+  "serve-dist": "npx serve -s dist -l 5000",
+  "serve-dist:win": "powershell -ExecutionPolicy Bypass -File ./scripts/serve-dist.ps1 -Port 5000"
   },
   "dependencies": {
     "@google/genai": "^1.25.0",
+    "http-server": "^14.1.1",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "run": "^1.5.0"
   },
   "devDependencies": {
     "@types/papaparse": "^5.3.14",
