--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "start": "vite preview",
   "build": "tsc && vite build",
   "preview": "vite preview",
-  "serve-dist": "npx serve -s dist -l 5000",
+  "serve-dist": "node ./scripts/serve-dist-node.js 5000",
   "serve-dist:win": "powershell -ExecutionPolicy Bypass -File ./scripts/serve-dist.ps1 -Port 5000"
   },
   "dependencies": {
